# koa

./: .env.example  CONTRIBUTING.md  Dockerfile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: agents.md  configuration.md  getting-started.md  proactive-intelligence.md  production-deployment.md  tools.md
koa/: __init__.py  __main__.py  app.py  base_agent.py  constants.py  errors.py  fields.py  message.py  models.py  protocols.py  result.py  standard_agent.py  tool_decorator.py
koa/agents/: __init__.py  decorator.py  discovery.py
koa/builtin_agents/: __init__.py
koa/builtin_agents/briefing/: __init__.py  agent.py  tools.py
koa/builtin_agents/calendar/: __init__.py  agent.py  search_helper.py  tools.py
koa/builtin_agents/cloud_storage/: __init__.py  agent.py
koa/builtin_agents/composio/: __init__.py  client.py  discord_agent.py  github_agent.py  linkedin_agent.py  slack_agent.py  spotify_agent.py  twitter_agent.py  youtube_agent.py
koa/builtin_agents/cron/: __init__.py  agent.py  tools.py
koa/builtin_agents/digest/: __init__.py  important_dates.py  important_dates_repo.py
koa/builtin_agents/email/: __init__.py  agent.py  importance.py  preference.py  tools.py
koa/builtin_agents/expense/: __init__.py  agent.py  budget_repository.py  receipt_repository.py  repository.py  tools.py
koa/builtin_agents/google_workspace/: __init__.py  agent.py  auth.py  client.py
koa/builtin_agents/image/: __init__.py  agent.py
koa/builtin_agents/location/: __init__.py
koa/builtin_agents/maps/: __init__.py  agent.py  tools.py
koa/builtin_agents/notion/: __init__.py  agent.py  client.py
koa/builtin_agents/proactive/: agent.py  habit_discovery.py
koa/builtin_agents/shared/: routing_preferences.py
koa/builtin_agents/shipment/: __init__.py  agent.py  shipment_repo.py  tools.py
koa/builtin_agents/smarthome/: __init__.py  agent.py  tools.py
koa/builtin_agents/subscription/: __init__.py  agent.py  tools.py
koa/builtin_agents/todo/: __init__.py  agent.py  tools.py
koa/builtin_agents/tools/: __init__.py  action_history.py  download_image.py  google_search.py  (+3 more)
koa/checkpoint/: __init__.py  manager.py  models.py  postgres_storage.py  storage.py
koa/config/: __init__.py  registry.py  schema.py
koa/credentials/: __init__.py  encryption.py  store.py
koa/db/: __init__.py  database.py  repository.py
koa/group/: __init__.py  group.py  map_reduce.py  merge.py  models.py
koa/hooks/: __init__.py  decorators.py  handlers.py  manager.py  models.py
koa/llm/: __init__.py  base.py  circuit_breaker.py  litellm_client.py  prompt_caching.py  registry.py  router.py  tool_validator.py
koa/mcp/: __init__.py  client.py  models.py  protocol.py  provider.py  sdk_client.py
koa/memory/: __init__.py  governance.py  manager.py  models.py  momex.py  session_memory.py  true_memory.py
koa/msghub/: __init__.py  hub.py  models.py
koa/oauth/: __init__.py  dropbox_oauth.py  google_oauth.py  hue_oauth.py  microsoft_oauth.py  notion_oauth.py  sonos_oauth.py
koa/observability/: __init__.py  context.py  logging_setup.py  metrics.py  task_registry.py  tracing.py
koa/orchestrator/: __init__.py  agent_tool.py  approval.py  audit_logger.py  context_manager.py  dag_executor.py  error_classifier.py  execution_policy.py  graceful_response.py  intent_analyzer.py  llm_manager.py  models.py  orchestrator.py  pool.py  postgres_pool.py  prompts.py  react_config.py  react_loop.py  reminder_guard.py  state_persistence.py  tool_manager.py  tool_pipeline.py  tool_policy.py  transcript_repair.py
koa/providers/: __init__.py  http_mixin.py  local_backend.py
koa/server/: __init__.py  app.py  cli_chat.py  cli_connect.py  main.py  models.py  rate_limit.py  ui.py
koa/services/: profile_extraction.py  profile_repo.py  shipment_poller.py
koa/static/: index.html  settings.html
koa/streaming/: __init__.py  engine.py  models.py
koa/tenant_gate/: __init__.py  backends.py  budget.py  gate.py  idempotency.py  rate_limiter.py
koa/triggers/: __init__.py  callback.py  condition.py  email_handler.py  engine.py  event.py  event_bus.py  executor.py  models.py  notification.py  pipeline.py  schedule.py
migrations/versions/: 002_tenant_profiles.py  004_cron_tables.py  005_tool_call_history.py  006_momex_schema.py  007_cron_soft_delete.py  008_fix_momex_pgvector.py  009_subscriptions.py  010_agent_plans.py
onevalet/: app.py  models.py  standard_agent.py
onevalet/credentials/: store.py
onevalet/db/: database.py
onevalet/llm/: __init__.py  copilot_auth.py  litellm_client.py  registry.py
onevalet/mcp/: sdk_client.py
onevalet/memory/: momex.py
onevalet/orchestrator/: agent_tool.py  constants.py  dag_executor.py  intent_analyzer.py  llm_manager.py  orchestrator.py  prompts.py  react_config.py  react_loop.py  tool_manager.py
onevalet/server/: app.py  main.py  models.py
onevalet/services/: profile_extraction.py  profile_repo.py
onevalet/triggers/: email_handler.py
tests/: test_app.py
tests/agents/: test_decorator.py  test_discovery.py
tests/checkpoint/: test_manager.py  test_memory_storage.py  test_models.py
tests/config/: test_registry.py  test_schema.py
tests/credentials/: test_encryption.py
tests/critical/: test_approval_timeout.py  test_circuit_breaker.py  test_credential_encryption_required.py  test_graceful_shutdown.py  test_idempotency.py  test_memory_governance.py  test_rate_limit.py  test_tool_schema_validation.py
tests/integration/: conftest.py  test_edge_cases.py
tests/llm/: test_base.py  test_circuit_breaker.py  test_prompt_caching.py
tests/memory/: test_governance.py  test_true_memory.py
tests/orchestrator/: test_context_manager.py  test_dag_executor.py  test_execution_policy.py  test_graceful_response.py  test_harness_safety_net.py  test_intent_analyzer.py  test_memory_integration.py  test_orchestrator_logic.py  test_tool_policy.py  test_transcript_repair.py
tests/providers/: test_local_backend.py  test_local_calendar_provider.py  test_local_todo_provider.py
(+174 files in other folders)
